@@ -5,10 +5,11 @@
     <label text="Import" id="vlImportSectionLabel"/>
         <tool file="VL/importer/study.xml"/>
         <tool file="VL/importer/individual.xml"/>
+        <tool file="VL/importer/biosample.xml"/>
     <label text="Tools" id="vlToolsSectionLabel"/>
         <tool file="VL/tools/snp_reannotator.xml"/>    
+        <tool file="VL/tools/map_vid.xml"/>
     <label text="Query" id="vlQuerySectionLabel"/>
-        <!-- tool file="VL/query/map.xml"/-->
   </section>
   <!-- OMERO/VL END -->
   <section name="Get Data" id="getext">
