@@ -1,0 +1,5 @@
+import sys
+from bl.vl.app.importer.main import main
+
+args = sys.argv[1:]
+main(args)
