@@ -1,0 +1,83 @@
+<tool id="vl_tools_map_vid" name="Tools_Map_VID">
+  <description>
+    Map labels of objects known to Omero/VL to their VID
+  </description>
+  <command interpreter="python">
+    map_vid.py
+    ${selected_column}
+    ${input1}
+    #if ${advanced_configuration.configuration_level} == 'advanced'
+      --host=${advanced_configuration.vl_host}
+      --user=${advanced_configuration.vl_user}
+      --passwd=${advanced_configuration.vl_passwd}
+    #else
+      --host=localhost
+      --user=root
+      --passwd=romeo
+    #end if
+    --operator=galaxy
+    --ofile=${output1}
+    --loglevel=WARNING
+    map
+    --ifile=${input1}
+    --source-type=${source_type.source_type}
+    #if ${source_type.source_type} == 'Individual'
+    --study ${source_type.study}
+    #end if
+  </command>  
+  <inputs>
+    <param format="tabular" name="input1" type="data"
+	   label="A tabular dataset with one 'label' column. See below."/>
+
+    <param name="selected_column" label="source label column" 
+	   type="data_column" data_ref="input1" />
+    
+    <conditional name="source_type">
+      <param name="source_type" type="select" 
+	     label="Select source type">
+	<option value="Tube" selected="true">Tube</option>	
+	<option value="Individual">Individual</option>
+      </param>
+      <when value="Tube"/>
+      <when value="Individual">
+	<param name="study" type="select" label="Study of enrollment" 
+	       help="Resolve enrollment in a known study. See below.">    
+	  <options from_parameter="tool.app.known_studies" 
+		   transform_lines="[ &quot;%s%s%s:%s&quot; 
+				    % ( l[0], self.separator, l[0], l[1][:40] ) 
+				    for l in obj ]">
+	    <column name="value" index="0"/>
+	    <column name="name" index="1"/>
+	    <filter type="sort_by" column="0"/>
+	  </options>
+	</param>
+      </when>
+    </conditional>
+
+    <!-- ************************************************** -->
+    <conditional name="advanced_configuration">
+      <param name="configuration_level" type="select" 
+	     label="Configuration level">
+	<option value="default" selected="true">Default configuration</option>	
+	<option value="advanced">Advanced configuration</option>
+      </param>
+      <when value="default"/>
+      <when value="advanced">
+	<param name="vl_host" size="40" type="text" value="biobank05.crs4.it" 
+	       label="Omero/VL host"/>
+	<param name="vl_user" size="20" type="text" value="galaxy" 
+	       label="Omero/VL user"/>
+	<param name="vl_passwd" size="20" type="text" value="What?Me worry?" 
+	       label="Omero/VL passwd"/>
+      </when>
+    </conditional>
+  </inputs>
+
+  <outputs>
+    <data format="tabular" name="output1"/>
+  </outputs>
+  <help>
+    
+  </help>
+
+</tool>
